| Summary: | ASTERISK-29635: MP3Player don' t work with actual mpg123 versions | ||
| Reporter: | Carlos Oliva (coliva) | Labels: | |
| Date Opened: | 2021-09-08 17:04:47 | Date Closed: | 2021-09-15 12:13:52 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_mp3 |
| Versions: | 18.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 11 Tested with distribution packages for mpg123 and current version 1.29 | Attachments: | |
| Description: | Trying to reproduce MP3 files with MP3Player, we only hear noise on calls.
We tested with 18.6 and older versions, and the problem remains the same when using Debian bullseye We discovered that actual versions of mpg123, using the same parameters that you use in your code, send more data than older versions. If you send the out data to a file, older versions creates files of half size than new versions. Parameters in our exection of MP3Player are: ["mpg123", "-q", "-s", "-b", "96", "-f", "8192", "--mono", "-r", "8000", "http://........"] Probably the parameters needed changed between old and actual versions of mpg123 to get the old behavior. We rolled back to ancient version 1.20.1 of MPG123 and everything works without need of patching asterisk, but I assume Asterisk should work with actual versions of mpg123. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-09-08 17:04:51.520-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: George Joseph (gjoseph) 2021-09-09 08:37:21.227-0500 Which version of mpg123 were you trying with? What's the file extension of the URL you're using? ".m3u", ".mp3", something else? By: Carlos Oliva (coliva) 2021-09-09 09:36:24.574-0500 File extension is MP3 Tried with Debian Bullseye standard package (1.26.4-1) and last version on http://mpg123.de/ (1.29.0) By: George Joseph (gjoseph) 2021-09-09 10:43:08.340-0500 Do you actually have a set of mpg123 parameters that work in app_mp3.c? By: Carlos Oliva (coliva) 2021-09-09 17:27:34.556-0500 unfortunately not. I tried different parameters but, at the end, the only solution I found was downgrade mpg123 to version I was using in other old machines that works. I'm not an expert on sound and don' t understand well the parameters of MPG123 By: George Joseph (gjoseph) 2021-09-10 07:08:27.155-0500 I wasn't able to find a good set of parameters either. By: George Joseph (gjoseph) 2021-09-10 07:08:57.444-0500 The module you're having difficulty with is in 'extended' support status and is supported only by community members. Your issue is in the queue. Your patience is appreciated as a community developer may work the issue when time and resources become available. Asterisk is an open source project and community members work the issues on a voluntary basis. You are welcome to develop your own patches and submit them to the project.[1] If you are not a programmer and you are in a hurry to see a patch provided then you might try rallying support on the Asterisk users mailing list or forums.[2] Another alternative is offering a bug bounty on the asterisk-dev mailing list.[3] Often a little incentive can go a long way. [1]: https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process [2]: http://www.asterisk.org/community/discuss [3]: https://wiki.asterisk.org/wiki/display/AST/Asterisk+Bug+Bounties By: Carlos Oliva (coliva) 2021-09-13 10:39:38.933-0500 After asking in mpg123 user list the developer provides a good set of parameters to solve the problem, simply add -e s16. I submited a patch for review in 18.6. By: Friendly Automation (friendly-automation) 2021-09-15 12:13:53.256-0500 Change 16503 merged by Friendly Automation: app_mp3: Force output to 16 bits in mpg123 [https://gerrit.asterisk.org/c/asterisk/+/16503|https://gerrit.asterisk.org/c/asterisk/+/16503] By: Friendly Automation (friendly-automation) 2021-09-15 12:16:31.879-0500 Change 16502 merged by Friendly Automation: app_mp3: Force output to 16 bits in mpg123 [https://gerrit.asterisk.org/c/asterisk/+/16502|https://gerrit.asterisk.org/c/asterisk/+/16502] By: Friendly Automation (friendly-automation) 2021-09-15 12:19:26.709-0500 Change 16501 merged by Friendly Automation: app_mp3: Force output to 16 bits in mpg123 [https://gerrit.asterisk.org/c/asterisk/+/16501|https://gerrit.asterisk.org/c/asterisk/+/16501] By: Friendly Automation (friendly-automation) 2021-09-15 12:44:39.341-0500 Change 16482 merged by Kevin Harwell: app_mp3: Force output to 16 bits in mpg123 [https://gerrit.asterisk.org/c/asterisk/+/16482|https://gerrit.asterisk.org/c/asterisk/+/16482] | ||